WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311779
DFG constant folding doesn't handle top correctly in CheckIsConstant
https://bugs.webkit.org/show_bug.cgi?id=311779
Summary
DFG constant folding doesn't handle top correctly in CheckIsConstant
Shu-yu Guo
Reported
2026-04-08 16:53:35 PDT
rdar://174288568
Attachments
Add attachment
proposed patch, testcase, etc.
Shu-yu Guo
Comment 1
2026-04-08 16:56:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62319
EWS
Comment 2
2026-04-08 21:59:03 PDT
Committed
310818@main
(291f0457787d): <
https://commits.webkit.org/310818@main
> Reviewed commits have been landed. Closing PR #62319 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug