[JSC] DFG constant folding doesn't handle top correctly in CheckIsConstant https://bugs.webkit.org/show_bug.cgi?id=311779 rdar://174288568

Reviewed by Keith Miller.

CheckIsConstant incorrectly treats all JSEmpty values as an actual empty
constant, whereas it may be a top value (i.e. indeterminate) when the
speculated type isn't SpecEmpty. This PR fixes it by not eliminating top
values.

Sidebar: AbstractValue::valueIsTop() exists, but isn't used at all right now
and hasn't been updated to consider SpecEmpty. This PR also fixes that and uses
it.

Test: JSTests/stress/dfg-check-is-constant-generic-iterator.js

* JSTests/stress/dfg-check-is-constant-generic-iterator.js: Added.
(symIter):
(opt):
(i.catch):
* Source/JavaScriptCore/dfg/DFGAbstractInterpreterInlines.h:
(JSC::DFG::AbstractInterpreter<AbstractStateType>::executeEffects):
* Source/JavaScriptCore/dfg/DFGAbstractValue.h:
(JSC::DFG::AbstractValue::valueIsTop const):
* Source/JavaScriptCore/dfg/DFGConstantFoldingPhase.cpp:
(JSC::DFG::ConstantFoldingPhase::foldConstants):

Canonical link: https://commits.webkit.org/310818@main